syntax = "proto3";

option csharp_namespace = "IntelliCook.RecipeSearch.Client";

message SearchRecipesByIngredientsRequest {
    string username = 1;
    repeated string ingredients = 2;
    optional uint32 limit = 3;
    optional bool include_detail = 4;
}

message SearchRecipesByIngredientsResponse {
    repeated SearchRecipesByIngredientsRecipe recipes = 1;
}

message SearchRecipesByIngredientsRecipe {
    int32 id = 1;
    string name = 2;
    optional SearchRecipesByIngredientsRecipeDetail detail = 3;
}

message SearchRecipesByIngredientsRecipeDetail {
    repeated string ingredients = 1;
    repeated string instructions = 2;
    string raw = 3;
}